# crypto-trading-agents

./: .gitignore  GUIDA.md  README.md  index.html  pyproject.toml
.github/workflows/: daily-analysis.yml  lint.yml
cli/: main.py
crypto_trading_agents/: __init__.py  default_config.py  optimizer.py
crypto_trading_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
crypto_trading_agents/agents/: __init__.py
crypto_trading_agents/agents/analysts/: __init__.py  fundamentals_analyst.py  market_analyst.py  news_analyst.py  onchain_analyst.py  sentiment_analyst.py
crypto_trading_agents/agents/managers/: portfolio_manager.py  research_manager.py
crypto_trading_agents/agents/researchers/: bear_researcher.py  bull_researcher.py
crypto_trading_agents/agents/risk_mgmt/: aggressive_debator.py  conservative_debator.py  neutral_debator.py
crypto_trading_agents/agents/trader/: trader.py
crypto_trading_agents/agents/utils/: agent_states.py  agent_utils.py  memory.py
crypto_trading_agents/dataflows/: __init__.py  coingecko.py  coinmarketcap.py  defillama.py  derivatives.py  fear_greed.py  indicators.py  rss_news.py  tools.py
crypto_trading_agents/graph/: conditional_logic.py  propagation.py  signal_processing.py  trading_graph.py
crypto_trading_agents/llm_clients/: __init__.py
docs/: index.html  workflow-guide.md
scripts/: sync_ta_results.py
tests/: test_optimizer.py  test_trading_graph.py
